# HydrogenLib

./: .gitignore  pyproject.toml  refact.py
.github/workflows/: python-release-publish.yml
hydrogenlib/: args.py  auth.py  config.py  core.py  crypto.py  ctypes.py  dantic.py  demo.py  downloader.py  filesystem.py  overload.py  pipe.py  py.py  quickapi.py  re.py  serialize.py  shm.py  socket.py  template.py  threading.py  winreg.py
modules/anydantic/: pyproject.toml
modules/anydantic/src/_hydrogenlib_anydantic/: model.py
modules/argsparser/: pyproject.toml
modules/argsparser/src/_hydrogenlib_argsparser/: args_processer.py
modules/auth/: pyproject.toml
modules/auth/src/_hydrogenlib_auth/: totp.py
modules/binstruct/: pyproject.toml
modules/binstruct/src/_hydrogenlib_struct/: struct_base.py  struct_info.py
modules/config/: pyproject.toml  requirements.txt
modules/config/re-import/core/: base.py  field.py  type_registry.py
modules/config/re-import/simple/: __init__.py  utils.py
modules/config/src/_hydrogenlib_config/: __about__.py  base.py  type_register.py  utils.py
modules/config/src/_hydrogenlib_config_core/: __about__.py  __init__.py  base.py  field.py  type_registry.py
modules/core/: pyproject.toml  requirements.txt
modules/core/src/_hydrogenlib_core/: __about__.py  async_methods.py  dataclasses_methods.py  decorators.py  descriptor.py  filemeta.py  hash.py  import_plus.py  network.py  nio.py  output_methods.py  runtime.py  time_.py
modules/crypto/: pyproject.toml  requirements.txt
modules/ctypes/: pyproject.toml
modules/ctypes/src/_hydrogenlib_ctypes/: __about__.py  __init__.py  _dll.py  _func.py  _types.py
modules/filesystem/: pyproject.toml
modules/filesystem/src/_hydrogenlib_filesystem/: abstract.py
modules/httpcache/: pyproject.toml
modules/httpcache/src/_hydrogenlib_httpcache/: cache_dir.py  cache_info.py  cachecontrol.py
modules/hyconfig/: pyproject.toml
modules/hydantic/: pyproject.toml
modules/ipc/: README.md  pyproject.toml
modules/objective-struct/: pyproject.toml
modules/quickapi/: pyproject.toml  requirements.txt
modules/quickapi/.test/: demo.py
modules/resource-system/: pyproject.toml
modules/sample/: pyproject.toml  requirements.txt
modules/threading/: pyproject.toml
modules/tools/: enter.py
modules/tools/scripts/: parse_c_headers.py
modules/winreg/: pyproject.toml
scripts/: base.py  build_project.py  clean.py  update-author-info.py  uvc.py
scripts/base/: __init__.py  base.py  console_.py  module.py  project.py  project_info.py
scripts/commands/: hatchc.py  uvc.py
scripts/module/: build.py  clear.py  ignore.py  info.py  new.py  publish.py  run.py
(+129 files in other folders)
