[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HydrogenLib-NEXT"
version = '11'
readme = "README.md"
requires-python = ">=3.12"
keywords = []
authors = [
    { name = "LittleNightSong", email = "LittleNightSongYO@outlook.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    'HydrogenLib-ReImporter'
]

import-names = ["hydrogenlib"]

[project.optional-dependencies]
config = ['HydrogenLib-Config']
core = ['HydrogenLib-Core']
resource-system = ['HydrogenLib-Resource-System']
ctypes = ['HydrogenLib-Ctypes']

[project.urls]
Documentation = "https://github.com/LittleNightSong/HydrogenLib#readme"
Issues = "https://github.com/LittleNightSong/HydrogenLib/issues"
Source = "https://github.com/LittleNightSong/HydrogenLib"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "aiohttp",
    "curl-cffi",
    "hatch",
    "hatchling",
    "httpx",
    "packaging",
    "pydantic",
    "tomlkit",
    "urllib3",
    "uv",
]

[tool.hatch.build.targets.wheel]
packages = []
